# PME

./: .bazelrc  BUILD  BUILD.bazel  README.md  WORKSPACE  characters.xcf  main.py  requirements.txt
bazel/: rules.bzl
evolution/: .bazelrc  .gitignore  BUILD.bazel  build_test_and_run.py
evolution/src/: main.cpp
evolution/src/agent/: BUILD.bazel  agent.cpp  agent.h
evolution/src/body/: BUILD.bazel  body.cpp  body.h
evolution/src/brain/: BUILD.bazel  brain.cpp  brain.h
evolution/src/common/: BUILD.bazel  common.cpp  common.h  event_handler.cpp  event_handler.h
evolution/src/genes/: BUILD.bazel  genes.cpp  genes.h
evolution/src/geometry/: BUILD.bazel  geometry.cpp  geometry.h
evolution/src/geometry/test/: BUILD.bazel  geometry_test.cc
evolution/src/graphics_handler/: BUILD.bazel  graphics_handler.h
evolution/src/world/: BUILD.bazel  world.h
scripts/: actions.py  auxiliary.py  brain.py  environment.py  human.py  plant.py  sense.py
src/: job.hpp  location.hpp  main.cpp  person.hpp  readme.md  resource.hpp
src/job/: BUILD.bazel  job.h
src/person/: BUILD.bazel  person.h
src/person/test/: BUILD.bazel  person_test.cc
src/place/: BUILD.bazel  location.h
src/place/test/: BUILD.bazel  location_test.cc
src/resource/: BUILD.bazel  resource.cpp  resource.h
src/resource/test/: BUILD.bazel  resource_test.cc
test/: BUILD  location_test.cpp  person_test.cpp  resource_test.cpp
tests/: test_human.py  test_plant.py
tools/timer/: BUILD.bazel  timer.h  timer_test.cpp
