cc_library(
    name = "common",
    srcs = ["common.cpp"],
    hdrs = ["common.h"],
    visibility = [
        "//src/agent:__pkg__",
        "//src/brain:__pkg__",
        "//src/body:__pkg__",
        "//src/genes:__pkg__",
        "//src/geometry:__pkg__",
        "//src/graphics_handler:__pkg__",
        "//src/world:__pkg__",
        "//:__pkg__"]
)

cc_library(
    name = "event_handler",
    srcs = ["event_handler.cpp"],
    hdrs = ["event_handler.h"],
    deps = [
        "@sfml//:sfml",
    ],
    visibility = [
        "//:__pkg__"]
)
