cc_library(
    name = "geometry",
    srcs = [
        "geometry.cpp"
    ],
    hdrs = [
        "geometry.h"
    ],
    deps = [
        "//src/common:common",
    ],
    visibility = [
        "//src/agent:__pkg__",
        "//src/body:__pkg__",
        "//src/geometry/test:__pkg__",
        "//src/graphics_handler:__pkg__",
        ]
)
