

cc_library(
    name = "graphics_handler",
    hdrs = [
        "graphics_handler.h"
    ],
    deps = [
        "//src/common:common",
        "//src/geometry",
    ],
    visibility = [
        "//src/body:__pkg__", # TODO: insensato
        "//src/agent:__pkg__", # TODO: insensato
        "//src/world:__pkg__",
        "//:__pkg__"]
)
